[gd_scene load_steps=19 format=3 uid="uid://cjw3p12ayi6fr"]

[ext_resource type="Script" uid="uid://dco5vlp2aavuf" path="res://scenes/levels/test_levels/ren_test_level.gd" id="1_j76wg"]
[ext_resource type="Texture2D" uid="uid://b4gr0ndbp5hdo" path="res://scenes/levels/test_levels/steelwrks-lvl.png" id="1_tt4ag"]
[ext_resource type="PackedScene" uid="uid://baf7wwkrbg72w" path="res://scenes/menu/pause/pause.tscn" id="2_4s4m6"]
[ext_resource type="PackedScene" uid="uid://2dum2dsmxn8w" path="res://scenes/menu/avatars/avatars.tscn" id="2_ay21j"]
[ext_resource type="Texture2D" uid="uid://16j4e3jw6hog" path="res://Art/door.png" id="2_d68gh"]
[ext_resource type="PackedScene" uid="uid://dtwxbv8c5k3fb" path="res://scenes/characters/dziady/dziad_I.tscn" id="2_tt4ag"]
[ext_resource type="PackedScene" uid="uid://dvymbfbp88xdx" path="res://scenes/props/plate/plate.tscn" id="5_4s4m6"]
[ext_resource type="PackedScene" uid="uid://bxxyey5y24qba" path="res://scenes/characters/dziady/dziad_II.tscn" id="5_sa84b"]
[ext_resource type="PackedScene" uid="uid://cpi4g7pxfemab" path="res://scenes/characters/enemies/enemy.tscn" id="5_tg8vw"]
[ext_resource type="Script" uid="uid://cc6hk8qmojo4p" path="res://scenes/levels/test_levels/camera_shake.gd" id="5_yulho"]
[ext_resource type="PackedScene" uid="uid://dx52prcy661j0" path="res://scenes/props/orb/orb.tscn" id="6_tg8vw"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hmuup"]
viewport_path = NodePath("Dziad_I/SubViewportContainer/SubViewport/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_67da0"]
viewport_path = NodePath("Dziad_II/SubViewportContainer/SubViewport/SubViewport")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j76wg"]
size = Vector2(143.66663, 146.42087)

[sub_resource type="Animation" id="Animation_sa84b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraHandle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8158, 4571)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraHandle/Camera2D:ingame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j76wg"]
resource_name = "enter"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraHandle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8158, 4571), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraHandle/Camera2D:ingame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ja4jy"]
resource_name = "exit"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraHandle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(12865, -7402)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraHandle/Camera2D:ingame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ja4jy"]
_data = {
&"RESET": SubResource("Animation_sa84b"),
&"enter": SubResource("Animation_j76wg"),
&"exit": SubResource("Animation_ja4jy")
}

[node name="RenTestLevel" type="Node2D"]
script = ExtResource("1_j76wg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.0
offset_right = 227.0
offset_bottom = 100.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Time" type="Label" parent="CanvasLayer/Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -138.0
offset_bottom = 100.0
grow_horizontal = 0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Stage" type="Label" parent="CanvasLayer/Control/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Water" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.3372549, 1, 0.47843137)

[node name="Button" type="Button" parent="CanvasLayer/Control/Water"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -48.0
offset_right = 116.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="Avatars" parent="." instance=ExtResource("2_ay21j")]

[node name="Dziad_I_Avatar" parent="Avatars/Control" index="2"]
texture = SubResource("ViewportTexture_hmuup")

[node name="Dziad_II_Avatar" parent="Avatars/Control" index="3"]
texture = SubResource("ViewportTexture_67da0")

[node name="Dziad_I_Avatar_Alt" parent="Avatars/Control" index="4"]
texture = SubResource("ViewportTexture_hmuup")

[node name="Pause" parent="." instance=ExtResource("2_4s4m6")]

[node name="Environment" type="Node2D" parent="."]

[node name="Floor" type="Sprite2D" parent="Environment"]
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("1_tt4ag")

[node name="Door" type="Sprite2D" parent="Environment"]
position = Vector2(2170, -1218)
scale = Vector2(3, 3)
texture = ExtResource("2_d68gh")

[node name="Exit" type="Area2D" parent="Environment/Door"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Door/Exit"]
position = Vector2(-51, 171)
rotation = 0.5534427
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_j76wg")

[node name="Walls" type="StaticBody2D" parent="Environment"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Environment/Walls"]
polygon = PackedVector2Array(-3600, 68, -534, -1450, 383, -1479, 3751, 307, 3757, -2138, -3822, -2145)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Environment/Walls"]
polygon = PackedVector2Array(-3600, 61, 290, 2053, 3751, 300, 3764, 2132, -3693, 2117)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("5_tg8vw")]
position = Vector2(666, -845)

[node name="Orbs" type="Node2D" parent="."]

[node name="Orb" parent="Orbs" instance=ExtResource("6_tg8vw")]
position = Vector2(-912, -426)

[node name="Plates" parent="." instance=ExtResource("5_4s4m6")]
position = Vector2(-612, 802)

[node name="Plate1" parent="Plates" index="0"]
position = Vector2(-1214, -734)

[node name="Plate2" parent="Plates" index="1"]
position = Vector2(1192, 243)

[node name="CameraHandle" type="Node2D" parent="."]
position = Vector2(-8158, 4571)

[node name="Camera2D" type="Camera2D" parent="CameraHandle" node_paths=PackedStringArray("dziad1", "dziad2")]
zoom = Vector2(0.255, 0.255)
limit_enabled = false
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("5_yulho")
randomStrength = 80.0
dziad1 = NodePath("../../Dziad_I")
dziad2 = NodePath("../../Dziad_II")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ja4jy")
}

[node name="Dziad_I" parent="." node_paths=PackedStringArray("other_dziad") instance=ExtResource("2_tt4ag")]
position = Vector2(-433, 95)
other_dziad = NodePath("../Dziad_II")
SPEED = 1000.0

[node name="Dziad_II" parent="." node_paths=PackedStringArray("other_dziad") instance=ExtResource("5_sa84b")]
position = Vector2(341, 101)
other_dziad = NodePath("../Dziad_I")
SPEED = 300.0

[node name="Skeleton3D" parent="Dziad_II/SubViewportContainer/SubViewport/SubViewport/BeetlebotSkin/beetle_bot/Armature" index="0"]
bones/16/position = Vector3(-0.015980886, -0.02, 0.35556722)
bones/17/rotation = Quaternion(0.161614, 0.17254345, 0.61860913, 0.74928796)
bones/18/rotation = Quaternion(-0.66226757, -0.012054818, -0.02151431, 0.7488615)
bones/19/rotation = Quaternion(0.09409632, 0.27880567, 0.8612515, 0.41431776)
bones/20/rotation = Quaternion(-0.8012804, -0.010297916, -0.026043545, 0.5976333)
bones/21/rotation = Quaternion(0.21460292, 0.08182372, 0.46696335, 0.85392964)
bones/22/rotation = Quaternion(-0.6711528, -0.01249915, -0.021709545, 0.74089575)
bones/24/rotation = Quaternion(0.1357995, -0.14951836, -0.62969816, 0.75012213)
bones/25/rotation = Quaternion(-0.5943829, 0.0129399225, 0.019309038, 0.80384624)
bones/26/rotation = Quaternion(0.08494719, -0.26653105, -0.848074, 0.45001757)
bones/27/rotation = Quaternion(-0.7644044, 0.011099683, 0.024845045, 0.6441627)
bones/28/rotation = Quaternion(0.18570237, -0.06360996, -0.48085037, 0.85454744)
bones/29/rotation = Quaternion(-0.60122806, 0.013474852, 0.019447742, 0.79872715)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="LandingPoint" type="Node2D" parent="." groups=["landing_points"]]
position = Vector2(-124, -1021)

[node name="LandingPoint2" type="Node2D" parent="." groups=["landing_points"]]
position = Vector2(62, 1385)

[node name="LandingPoint3" type="Node2D" parent="." groups=["landing_points"]]
position = Vector2(2463, 227)

[node name="LandingPoint4" type="Node2D" parent="." groups=["landing_points"]]
position = Vector2(-2610, 110)

[connection signal="pressed" from="CanvasLayer/Control/Water/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Environment/Door/Exit" to="." method="_on_exit_body_entered"]
[connection signal="plate_done" from="Plates" to="." method="_on_plates_plate_done"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Avatars"]
[editable path="Plates"]
[editable path="Dziad_I"]
[editable path="Dziad_II"]
[editable path="Dziad_II/SubViewportContainer/SubViewport/SubViewport/BeetlebotSkin"]
[editable path="Dziad_II/SubViewportContainer/SubViewport/SubViewport/BeetlebotSkin/beetle_bot"]
